@@ -176,7 +176,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
             String criterionPropertyName = getCriterionPropertyName(criterion.getProperty(), context);
             if (value instanceof Iterable<?> iterable) {
                 List<?> values = CollectionUtils.iterableToList(iterable);
-                obj.put(criterionPropertyName, singletonMap("$in", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).collect(Collectors.toList())));
+                obj.put(criterionPropertyName, singletonMap("$in", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).toList()));
             } else {
                 obj.put(criterionPropertyName, singletonMap("$in", singletonList(valueRepresentation(context, propertyPath, value))));
             }
@@ -187,7 +187,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
             String criterionPropertyName = getCriterionPropertyName(criterion.getProperty(), context);
             if (value instanceof Iterable<?> iterable) {
                 List<?> values = CollectionUtils.iterableToList(iterable);
-                obj.put(criterionPropertyName, singletonMap("$nin", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).collect(Collectors.toList())));
+                obj.put(criterionPropertyName, singletonMap("$nin", values.stream().map(val -> valueRepresentation(context, propertyPath, val)).toList()));
             } else {
                 obj.put(criterionPropertyName, singletonMap("$nin", singletonList(valueRepresentation(context, propertyPath, value))));
             }
@@ -225,7 +225,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
             Object criteriaValue;
             if (value instanceof Iterable<?> iterable) {
                 List<?> values = CollectionUtils.iterableToList(iterable);
-                criteriaValue = values.stream().map(val -> valueRepresentation(context, propertyPath, val)).collect(Collectors.toList());
+                criteriaValue = values.stream().map(val -> valueRepresentation(context, propertyPath, val)).toList();
             } else {
                 criteriaValue = singletonList(valueRepresentation(context, propertyPath, value));
             }
@@ -495,7 +495,7 @@ public final class MongoQueryBuilder implements QueryBuilder {
         }
         List<String> joined = joins.stream().map(JoinPath::getPath)
                 .sorted((o1, o2) -> Comparator.comparingInt(String::length).thenComparing(String::compareTo).compare(o1, o2))
-                .collect(Collectors.toList());
+                .toList();
         for (String join : joined) {
             StringJoiner rootPath = new StringJoiner(".");
             StringJoiner currentEntityPath = new StringJoiner(".");
