@@ -681,7 +681,7 @@ public final class DefaultJdbcRepositoryOperations extends AbstractSqlRepository
                         op.update();
                         return op.getEntity();
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             }
             JdbcEntitiesOperations<T> op = new JdbcEntitiesOperations<>(ctx, persistentEntity, operation, storedQuery);
             op.update();
@@ -743,7 +743,7 @@ public final class DefaultJdbcRepositoryOperations extends AbstractSqlRepository
                         op.persist();
                         return op.getEntity();
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             } else {
                 JdbcEntitiesOperations<T> op = new JdbcEntitiesOperations<>(ctx, persistentEntity, operation, storedQuery, true);
                 op.persist();
