@@ -252,7 +252,7 @@ abstract sealed class AbstractMongoRepositoryOperations<Dtb> extends AbstractRep
         StringBuilder sb = new StringBuilder("Executing Mongo 'aggregate'");
         if (options != null) {
             sb.append(" with");
-            sb.append(" pipeline: ").append(aggregation.getPipeline().stream().map(e -> e.toBsonDocument().toJson()).collect(Collectors.toList()));
+            sb.append(" pipeline: ").append(aggregation.getPipeline().stream().map(e -> e.toBsonDocument().toJson()).toList());
             Collation collation = options.getCollation();
             if (collation != null) {
                 sb.append(" collation: ").append(collation);
