@@ -299,7 +299,7 @@ final class DefaultR2dbcRepositoryOperations extends AbstractSqlRepositoryOperat
     }
 
     private <T> Flux<T> concatMono(Stream<Mono<T>> stream) {
-        return Flux.concat(stream.collect(Collectors.toList()));
+        return Flux.concat(stream.toList());
     }
 
     @NonNull
@@ -1018,7 +1018,7 @@ final class DefaultR2dbcRepositoryOperations extends AbstractSqlRepositoryOperat
             if (hasGeneratedId) {
                 entities = entities
                     .flatMap(list -> {
-                        List<Data> notVetoedEntities = list.stream().filter(this::notVetoed).collect(Collectors.toList());
+                        List<Data> notVetoedEntities = list.stream().filter(this::notVetoed).toList();
                         if (notVetoedEntities.isEmpty()) {
                             return Mono.just(notVetoedEntities);
                         }
