@@ -89,7 +89,7 @@ public abstract class AbstractSyncEntitiesOperations<Ctx extends OperationContex
             Data d = new Data();
             d.entity = entity;
             return d;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
@@ -158,7 +158,7 @@ public abstract class AbstractSyncEntitiesOperations<Ctx extends OperationContex
 
     @Override
     public List<T> getEntities() {
-        return entities.stream().map(d -> d.entity).collect(Collectors.toList());
+        return entities.stream().map(d -> d.entity).toList();
     }
 
     @SuppressWarnings("VisibilityModifier")
